# magickpp-cmake

./: .gitignore  README.md
Magick++/: CMakeLists.txt  Magick++Config.cmake.in
Magick++/lib/Magick++/: Include.h
magick/: magick_config.h
